--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@
   META_ACCESS_TOKEN: 
   EXPIREATION_MINUTE:
   MAIL_API_KEY:
+  SPOTIFY_REDIRECT_URL:
+  SPOTIFY_CLIENT_ID: 
+  SPOTIFY_CLIENT_SECRET :
