added payment routes

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@
   SPOTIFY_REDIRECT_URL:
   SPOTIFY_CLIENT_ID: 
   SPOTIFY_CLIENT_SECRET :
+  RAZOR_WEBHOOK_SECRET:
+  XCLIENT_ID:
+  XCLIENT_SECRET:
+  RAZORPAY_API_KEY:
+  RAZOR_API_SECRET:
