update readME.md file

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,29 @@
-  PORT: 
-  DB_URL: 
-  GOOGLE_CLIENT_ID: 
-  GOOGLE_CLIENT_SECRET: 
-  REDIRECT_URI:
-  FRONTEND_REDIRECT_URL_local: 
-  FRONTEND_REDIRECT_URL:
-  FRONTEND_URL_local:
-  JWT_SECRET: 
-  TWILIO_accountSid: 
-  TWILIO_authToken: 
-  META_PHONE_ID:
-  META_ACCESS_TOKEN: 
-  EXPIREATION_MINUTE:
-  MAIL_API_KEY:
-  SPOTIFY_REDIRECT_URL:
-  SPOTIFY_CLIENT_ID: 
-  SPOTIFY_CLIENT_SECRET :
-  RAZOR_WEBHOOK_SECRET:
-  XCLIENT_ID:
-  XCLIENT_SECRET:
-  RAZORPAY_API_KEY:
-  RAZOR_API_SECRET:
+PORT=8008 #your Port
+# DB_URL= sghfhgfhfgh
+GOOGLE_CLIENT_ID= fghgfhfghfg
+GOOGLE_CLIENT_SECRET= ghghsdfh
+REDIRECT_URI=http://localhost:8000
+FRONTEND_REDIRECT_URL_local= http://localhost:8000
+FRONTEND_REDIRECT_URL=http://localhost:8000
+FRONTEND_URL_local=http://localhost:8000
+JWT_SECRET= gfhsfghfgh
+TWILIO_accountSid= sghfgbfdg
+TWILIO_authToken= gfhdshh
+META_PHONE_ID=sghsrth
+META_ACCESS_TOKEN= dhfghsgdhf
+EXPIREATION_MINUTE=hfsdxdf
+MAIL_API_KEY=wegbdhfjhfj
+SPOTIFY_REDIRECT_URL=http://localhost:8000
+SPOTIFY_CLIENT_ID= grwefvdvf
+SPOTIFY_CLIENT_SECRET =wtgrvfdevfd
+RAZOR_WEBHOOK_SECRET=sdgrtgwrt
+XCLIENT_ID=ewgvrwergvfd
+XCLIENT_SECRET=ewgewfre
+RAZORPAY_API_KEY=fgdsrerg
+RAZOR_API_SECRET=hgjklsadgf
+HOST=localhost 
+DBUSER=postgres
+PASSWORD=123
+DATABASE=development
+DBPORT=5432
+SSL=false
